--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
     <div class="container">
         <h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" alt="Logo do Futebol"> WOLFSBURG
+            <img src="https://ssl.gstatic.com/onebox/media/sports/logos/nCdwmPlnAA041M4HDMzmkg_64x64.png" alt="Logo do Futebol"> WOLFSBURG
         </h1>
         
     
@@ -161,7 +161,7 @@
             <tbody id="bundesligaTable">
                 <tr>
                     <td>1</td>
-                    <td><img src="https://images.app.goo.gl/6DLiTrYc3kt3Koy18"> RB Leipzig</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/R7-Lqc_SDxd97uWgoeUQ-g_64x64.png"> RB Leipzig</td>
                     <td>5</td>
                     <td class="points"></td>
                     <td>5</td>
@@ -170,7 +170,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="https://w7.pngwing.com/pngs/714/227/png-transparent-borussia-dortmund-bundesliga-fc-bayern-munich-football-uefa-europa-league-football-text-trademark-sport-thumbnail.png"> Borussia Dortmund</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/FZnTSH2rbHFos4BnlWAItw_64x64.png"> Borussia Dortmund</td>
                     <td>5</td>
                     <td class="points"></td>
                     <td>4</td>
@@ -179,39 +179,39 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/FZnTSH2rbHFos4BnlWAItw_64x64.png">  Vfl Wolfsburg</td>
-                    <td>10</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/nCdwmPlnAA041M4HDMzmkg_64x64.png">  Vfl Wolfsburg</td>
+                    <td>5</td>
                     <td class="points"></td>
+                    <td>3</td>
+                    <td>1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Qc_eb6-lZEDR8ojQmZxFhQ_64x64.png"> Stuttgart </td>
+                    <td>5</td>
+                    <td class="points"></td>
+                    <td>3</td>
+                    <td>1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/-_cmntP5q_pHL7g5LfkRiw_64x64.png"> Bayer Munchen </td>
+                    <td>5</td>
+                    <td class="points"></td>
+                    <td>3</td>
+                    <td>1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
                     <td>6</td>
-                    <td>3</td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td><img src="https://via.placeholder.com/30" alt="Time D Logo"> Time D</td>
-                    <td>10</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/tMFLGl5GGkQXMihhpJVXuw_64x64.png"> Pauli </td>
+                    <td>5</td>
                     <td class="points"></td>
-                    <td>5</td>
-                    <td>4</td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td><img src="https://via.placeholder.com/30" alt="Time E Logo"> Time E</td>
-                    <td>10</td>
-                    <td class="points"></td>
-                    <td>5</td>
-                    <td>3</td>
                     <td>2</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td><img src="https://via.placeholder.com/30" alt="Time F Logo"> Time F</td>
-                    <td>10</td>
-                    <td class="points"></td>
-                    <td>4</td>
-                    <td>4</td>
                     <td>2</td>
+                    <td>1</td>
                 </tr>
                 <tr>
                     <td>7</td>
